--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -7,10 +7,17 @@
   padding: 4rem 0;
   flex: 1;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   font-size: 1.25rem;
 }
  
- 
+ .calendar{
+   display: flex;   
+
+   
+ }
+ .dayInfo{
+   display: flex;
+ }
