--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -4,20 +4,22 @@
 
 .main {
   min-height: 100vh;
-  padding: 4rem 0;
+  padding: 2rem 0;
   flex: 1;
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
+  justify-content: space-between; 
   font-size: 1.25rem;
 }
  
  .calendar{
-   display: flex;   
-
-   
+   display: flex;    
+   justify-content: flex-start;
+   align-items: flex-start; 
  }
+
  .dayInfo{
    display: flex;
+   flex-direction: column;  
+
  }
