--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -8,18 +8,19 @@
   flex: 1;
   display: flex;
   flex-direction: row;
-  justify-content: space-between; 
+  justify-content: space-between;
   font-size: 1.25rem;
 }
- 
- .calendar{
-   display: flex;    
-   justify-content: flex-start;
-   align-items: flex-start; 
- }
 
- .dayInfo{
-   display: flex;
-   flex-direction: column;  
+.calendar {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
 
- }
+.dayInfo {
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 auto;
+}
+
