--- a/styles/Weekday.module.css
+++ b/styles/Weekday.module.css
@@ -1,14 +1,15 @@
 .weekdayGrid {
-    display: flex;
-    width: 100%;
-    justify-self: flex-start;
-    flex-wrap: nowrap;
-    justify-content: space-between;
+  display: flex;
+  width: 100%;
+  justify-self: flex-start;
+  flex-wrap: nowrap;
+  justify-content: space-between;
 }
 
-.day{
-    display: flex;
-    background: blue;
-    margin: 5px; 
-    flex: 1
+.day {
+  display: flex;
+  background: blue;
+  margin: 5px;
+  flex: 1;
 }
+ 
