--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -1,15 +1,18 @@
 .container {
-  padding: 0 2rem;
+  padding: 0 2rem; 
+  background: cornflowerblue;
 }
 
 .main {
   min-height: 100vh;
+  background: white; 
   padding: 2rem 0;
   flex: 1;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   font-size: 1.25rem;
+  border-radius: 25px
 }
 
 
