--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,14 +18,20 @@ a {
 
 .calendar {
   display: flex;  
+  justify-content: space-between;
 }
 
 .weekView {
-  
+  display: flex;
+  width: 70%;
+  flex-direction: column;
+  overflow: hidden;
 }
 
 .dayInfo {
   display: flex;
+  width: 30%; 
   flex-direction: column;
   flex: 1 1 auto; 
+  overflow: hidden;
 }
