--- a/styles/HabitRow.module.css
+++ b/styles/HabitRow.module.css
@@ -1,3 +1,10 @@
 .habitCard {
     border: 1px;
 }
+
+.box {
+    width: 30px;
+    height: 30px;
+    background: red;
+    border-radius: 5px; 
+  }
