--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,6 +18,7 @@ a {
 .calendar {
   display: flex;
   justify-content: space-between;
+  flex-grow: 1;
 }
 
 .weekView {
@@ -45,4 +46,36 @@ table td {
 
 table td div {
   margin: 5px auto;
+}
+
+.addHabit {
+  --button-color: #00c410;
+  display: inline-block;
+  outline: none;
+  cursor: pointer;
+  font-size: 14px;
+  line-height: 1;
+  border-radius: 500px;
+  transition-property: background-color,border-color,color,box-shadow,filter;
+  transition-duration: .3s;
+  border: 1px solid transparent;
+  letter-spacing: 2px;
+  min-width: 140px;
+  max-width: 180px;
+  text-transform: uppercase;
+  white-space: normal;
+  font-weight: 700;
+  text-align: center;
+  padding: 11px 14px 18px;
+  color: var(--button-color);
+  margin: 10px 20px;
+  box-shadow: inset 0 0 0 2px var(--button-color);
+  background-color: transparent;
+  height: 38px;
+  
+
+}
+.addHabit:hover{
+  color: #fff;
+  background-color: var(--button-color);
 }
