post is working, added scrolling

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -80,3 +80,7 @@ table td div {
   background-color: var(--button-color);
 }
  
+::-webkit-scrollbar {
+  width: 0px;
+  background: transparent; /* make scrollbar transparent */
+}
