edit loads data, need to add update backend

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -84,3 +84,9 @@ table td div {
   width: 0px;
   background: transparent; /* make scrollbar transparent */
 }
+
+/* dot menu */
+.test:after { 
+  content: '\2807';
+  font-size: 30px;
+  }
