--- a/styles/HabitCard.module.css
+++ b/styles/HabitCard.module.css
@@ -1,6 +1,7 @@
 .card {
     display: flex;
-    flex-direction: column;
+    flex-direction: column; 
+    padding: 5px 10px;  
 }
  
 
@@ -13,6 +14,14 @@
     flex-direction: row;
     justify-content: space-between;
 } 
+
+.spacedBottom {
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-end;
+} 
+ 
 
 .btn{
     cursor: pointer;
