--- a/styles/globals.css
+++ b/styles/globals.css
@@ -56,8 +56,8 @@ table td div {
   font-size: 14px;
   line-height: 1;
   border-radius: 500px;
-  transition-property: background-color,border-color,color,box-shadow,filter;
-  transition-duration: .3s;
+  transition-property: background-color, border-color, color, box-shadow, filter;
+  transition-duration: 0.3s;
   border: 1px solid transparent;
   letter-spacing: 2px;
   min-width: 140px;
@@ -72,21 +72,21 @@ table td div {
   box-shadow: inset 0 0 0 2px var(--button-color);
   background-color: transparent;
   height: 38px;
-  
-
 }
-.addHabit:hover{
+.addHabit:hover {
   color: #fff;
   background-color: var(--button-color);
 }
- 
+
 ::-webkit-scrollbar {
   width: 0px;
   background: transparent; /* make scrollbar transparent */
 }
 
 /* dot menu */
-.test:after { 
-  content: '\2807';
+.test:after {
+  content: "\2807";
   font-size: 30px;
-  }
+}
+
+ 
