adding styling and a back button to the forms

--- a/styles/AddHabit.module.css
+++ b/styles/AddHabit.module.css
@@ -9,3 +9,40 @@
   margin: auto;
 }
  
+.spaced{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.goBack  {
+  background-color: #0276ac;
+  border-radius: 8px;
+  border-style: none;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block; 
+  font-size: 20px;
+  font-weight: 500;
+  height: 30px;
+  line-height: 10px;
+  list-style: none;
+  margin: 0;
+  outline: none;
+  padding: 10px 16px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  transition: color 100ms;
+  vertical-align: baseline;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation; 
+}
+
+.goBack:hover,
+.goBack:focus {
+  background-color: #005279;
+}
