--- a/styles/globals.css
+++ b/styles/globals.css
@@ -90,3 +90,18 @@ table td div {
 }
 
  
+.goBack {
+  align-self: center;
+  width: 50px;
+  flex-grow: 1;
+  height: 30px;
+  font-size: 1.2rem;
+  border-color: rgba(128, 160, 255, 0.158);
+  border-radius: 10px;
+  margin: 0px 10px;
+  background-color: rgb(240, 240, 240);
+}
+
+.goBack:hover {
+  background-color: rgb(153, 169, 185);
+}
